kubeconfig/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: rasoi-app
  name: rasoi-app-ingress
spec:
  rules:
    - host: { { host } }
      http:
        paths:
          - backend:
              service:
                name: rasoi-app
                port:
                  number: 9191
            path: /
            pathType: "Prefix"
    - host: rasoi-app.com
      http:
        paths:
          - backend:
              service:
                name: rasoi-app
                port:
                  number: 9191
            path: /
            pathType: "Prefix"
